# raylib-game-template-vscode

./: CMakeLists.txt  CMakePresets.json
src/: Window.h  main.cpp
src/resources/: minshell.html
